Arreglo link y titulos

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
         </section>
             <!-- Cards -->
+             <h2 id="ejercicios">Ejercicios</h2>
         <section class="container mt-5">
             <div class="row row-cols-1 row-cols-md-5 g-4">
                 <div class="container">
