Agrego nav Inicio

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
         <nav>
             <ul>
+                <li><a href="#perfil">Inicio</a></li>
                 <li><a href="#ejercicios">Ejercicios</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
