--- a/Diseño Web/Ejercicio1.html
+++ b/Diseño Web/Ejercicio1.html
@@ -3,15 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/styles.css">
     <title>ejericio1</title>
 </head>
 <body>
-    <h1>Primeros pasos con HTML</h1>
+    <header class="header-ejercicios">
+        <h1>Primeros pasos con HTML</h1>
+        <nav>
+            <a href="../index.html">Inicio</a>
+        </nav>
+    </header>
+    <main class="main-ejercicios">
     <ul><li><a href="01.html">Ejercicio 1</a></li>
         <li><a href="02.html">Ejercicio 2</a></li>
         <li><a href="03.html">Ejercicio 3</a></li>
         <li><a href="04.html">Ejercicio 4</a></li>
     </ul>
-    
+    </main>
 </body>
 </html>
