--- a/Ejercicio 08/indice8.html
+++ b/Ejercicio 08/indice8.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/styles.css">
     <title>ejericio8</title>
 </head>
-<body>
-    <h1>Introduccion a JavaScript</h1>
-    <ul><li><a href="uno.html">Ejercicio 1</a></li>
-        <li><a href="dos.html">Ejercicio 2</a></li>
-        <li><a href="tres.html">Ejercicio 3</a></li>
-        <li><a href="cuatro.html">Ejercicio 4</a></li>
-        <li><a href="cinco.html">Ejercicio 5</a></li>
-        <li><a href="seis.html">Ejercicio 6</a></li>
 
-    </ul>
-    
+<body>
+    <header class="header-ejercicios">
+        <h1>Introduccion a JavaScript</h1>
+        <nav>
+            <a href="../index.html">Inicio</a>
+        </nav>
+    </header>
+    <main class="main-ejercicios">
+        <ul>
+            <li><a href="uno.html">Ejercicio 1</a></li>
+            <li><a href="dos.html">Ejercicio 2</a></li>
+            <li><a href="tres.html">Ejercicio 3</a></li>
+            <li><a href="cuatro.html">Ejercicio 4</a></li>
+            <li><a href="cinco.html">Ejercicio 5</a></li>
+            <li><a href="seis.html">Ejercicio 6</a></li>
+        </ul>
+    </main>
 </body>
+
 </html>
