--- a/Ejercicio 05/ejercicio-05/indice5.html
+++ b/Ejercicio 05/ejercicio-05/indice5.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../CSS/styles.css">
     <title>ejericio5</title>
 </head>
-<body>
-    <h1>Maquetado fijo y fluido</h1>
-    <ul><li><a href="01-fijo.html">Fijo</a></li>
-        <li><a href="02-fluido.html">Fluido</a></li>
 
-    </ul>
-    
+<body>
+    <header class="header-ejercicios">
+        <h1>Maquetado fijo y fluido</h1>
+        <nav>
+            <a href="../../index.html">Inicio</a>
+        </nav>
+    </header>
+    <main class="main-ejercicios">
+        <ul>
+            <li><a href="01-fijo.html">Fijo</a></li>
+            <li><a href="02-fluido.html">Fluido</a></li>
+        </ul>
+    </main>
 </body>
+
 </html>
