--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         </section>
             <!-- Cards -->
-             <h2 id="ejercicios">Ejercicios</h2>
+             <h2 id="ejercicios">Ejercicios: </h2>
         <section class="container mt-5">
             <div class="row row-cols-1 row-cols-md-5 g-4">
                 <div class="container">
@@ -112,7 +112,7 @@
 
     <footer>
         <section id="contacto">
-            <h3>Contacto</h3>
+            <h3>Contacto:</h3>
             <ul>
                 <li>Email: tobitraverso@gmail.com</li>
                 <li>Whatsapp: <a href="https://wa.me/5491112345678" target="_blank">11-1234-5678</a></li>
@@ -120,6 +120,7 @@
                 <li><a href="https://github.com/Tobias024">GitHub </a></li>
                 </li>
             </ul>
+        </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
